package com.example.courtierprobackend.documents.datalayer.enums;

public enum DocumentPartyEnum {
    BUYER,
    SELLER,
    BROKER,
    LENDER,
    NOTARY,
    INSPECTOR,
    OTHER,
    CLIENT
}
