package com.example.courtierprobackend.documents.datalayer.enums;

public enum DocumentStatusEnum {
    DRAFT,
    REQUESTED,
    SUBMITTED,
    APPROVED,
    NEEDS_REVISION,
    REJECTED
}
